# sheppi

./: .gitignore  CLAUDE.md  README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  todo_skill.md  todos.rs
src-tauri/src/usage/: db.rs  ingest.rs  mod.rs  model_pricing_snapshot.json  providers.rs  queries.rs
src-tauri/src/workspace/: config.rs
src/components/layout/: AppShell.tsx
src/components/settings/: SettingsPanel.tsx
src/components/sidebar/: ActivityIndicator.tsx  AgentSessionList.tsx  AssistantButton.tsx  GroupHeader.tsx  ProjectItem.tsx  ProjectList.tsx  Sidebar.tsx  SidebarSectionToggle.tsx  SidebarUsage.tsx  TerminalItem.tsx  TodoRow.tsx  constants.ts
src/components/terminal/: TerminalView.tsx  terminalTheme.ts
src/components/todos/: TodosPanel.tsx
src/components/usage/: usageHelpers.ts
src/hooks/: useGitWatcher.ts
src/lib/: assistantLogos.ts  notifications.ts  tabKindMeta.tsx  tauri.ts  terminalViewport.ts  types.ts
src/stores/: useProjectSettingsStore.ts  useTerminalStore.ts  useTodoStore.ts  useUpdateStore.ts  useUsageSettingsStore.ts
src/styles/: globals.css
