[package]
name = "shep"
version = "0.2.7"
description = "Terminal workspace manager"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shep_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api"] }
tauri-plugin-log = "2"
portable-pty = "0.8"
dirs = "6.0"
tauri-plugin-dialog = "2"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri-plugin-notification = "2"
libc = "0.2"
rusqlite = { version = "0.33", features = ["bundled"] }
notify = { version = "7", features = ["macos_fsevent"] }
core-text = "21"
core-foundation = "0.10"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
url = "2"
